--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -642,7 +642,7 @@ body {
   /* Vertically center */
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 0.5px;
   /* Thickness of the dashed line */
   background-image: linear-gradient(to right, #ffffff 50%, transparent 50%);
   /* Dashed effect */
@@ -763,13 +763,13 @@ body {
   /* box-shadow: 0 10px 40px rgba(0, 0, 0, 0.07); */
   max-width: 100%;
   /* margin: 3rem auto; */
-  height: 750px;
+  height: 100eh;
 }
 
 @media (min-width: 1024px) {
   .testimonial-section {
     flex-direction: row;
-    min-height: 700px;
+    min-height: 100vh;
   }
 }
 
@@ -779,7 +779,6 @@ body {
   background-size: cover;
   background-position: center;
   width: 500px;
-  border-top-right-radius: 1.5rem;
   border-top-right-radius: 1.5rem;
 }
 
@@ -794,7 +793,8 @@ body {
 
 .testimonial-title {
   position: absolute;
-  top: 5%;
+  top: 30px;
+
 }
 
 .subtitle {
@@ -807,8 +807,8 @@ body {
 }
 
 .title {
-  font-size: 2.25rem;
-  font-weight: 800;
+  font-size: 3rem;
+  font-weight: 100;
   margin-bottom: 10px;
   margin-right: 100px;
   /* padding: none; */
@@ -824,7 +824,7 @@ body {
 .slider-full-container {
   position: absolute;
   right: -10%;
-  top: 25%;
+  top: 20%;
   overflow-y: hidden;
 }
 
@@ -947,7 +947,7 @@ body {
 .nav-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 30px;
   /* margin-bottom: 10px; */
   margin-left: 800px;
   border: 1px solid #11111138;
@@ -1438,7 +1438,7 @@ body {
   padding: 50px 20px;
   box-sizing: border-box;
   height: 141vh;
-  margin-bottom: 180px;
+  margin-bottom: 150px;
   /* background-color: ; */
 }
 
@@ -1459,20 +1459,20 @@ body {
   align-items: center;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
-.content-container::before {
+/* .content-container::before {
   content: "";
-  border: 2px solid #e0a800;
+  border: 5px solid #fff;
   position: absolute;
   width: 100%;
   max-width: 1200px;
   height: 250px;
   top: 6px;
   left: 6px;
-  z-index: -1;
-}
+  z-index: 1;
+} */
 
 .inner-content {
   display: flex;
@@ -1492,7 +1492,7 @@ body {
   height: 250px;
   border: 2px solid #ffc800;
   position: absolute;
-  margin-top: 70px;
+  margin-top: 50px;
   margin-left: 90px;
 }
 
@@ -1597,11 +1597,11 @@ body {
 
 .services-section {
   background-color: transparent;
-  padding: 60px 20px;
+  padding: 20px 20px;
   color: white;
   position: relative;
   overflow: hidden;
-  margin-top: 50px;
+  margin-top: 0px;
 }
 
 .services-container {
@@ -2814,7 +2814,7 @@ body {
   align-items: center;
   font-size: 1.2rem;
   font-weight: 800;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0 40px 15px rgba(0, 0, 0, 0.3); */
   z-index: 2000;
   transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
@@ -2828,7 +2828,7 @@ body {
 
 /* Card content */
 .service2-content {
-  padding: 45px 20px 20px 20px;
+  padding: 40px 20px 20px 20px;
   flex-grow: 1;
   position: relative;
   overflow: hidden;
