--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,19 +5,6 @@ body {
   box-sizing: border-box;
 }
 
-.tt-header-inner {
-  /* background-color: #fff !important; */
-  height: 100px !important;
-}
-
-.nav-logo img {
-  height: 80px;
-  width: auto;
-  display: block;
-  background-color: transparent;
-  margin-bottom: 40px;
-}
-
 
 .about-section {
   position: relative;
@@ -27,7 +14,7 @@ body {
   align-items: center;
   padding-left: 60px;
   color: white;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 }
 
 .about-section h1 {
